Rename the Project name

--- a/RA_Procjet (Server)/.project
+++ b/RA_Procjet (Server)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RA_Procjet</name>
+	<name>RA_Procjet (Server)</name>
 	<comment></comment>
 	<projects>
 	</projects>
